fixed scrollbar height for chatbar
Former-commit-id: 29e868880045a669b36cb57eb4e7512ed08b136e

--- a/desktop/src/app/components/chat-bar/chat-bar.component.scss
+++ b/desktop/src/app/components/chat-bar/chat-bar.component.scss
@@ -9,7 +9,6 @@
   padding-top: 5%;
   width: 100%;
   height: 410px;
-  overflow-y: scroll;
 }
 
 .chat-button:active {
@@ -172,4 +171,9 @@ hr {
   border-radius: 50%;
   width: 15px;
   height: 15px;
+}
+
+.scroller {
+  overflow-y: scroll;
+  height: 100%;
 }
